@@ -5,8 +5,9 @@
 (function(tinymce){
 	tinymce.VK = {
 		DELETE:46,
-		BACKSPACE:8
-		
+		BACKSPACE:8,
+		ENTER:13,
+		TAB:9
 	}
 
 })(tinymce);
