@@ -15,6 +15,7 @@ QUnit.config.autostart = false;
 
 var ENTER = 0xA;
 var TAB = 0x9;
+var ZERO_SIZED_NBSP = "\uFEFF";
 
 module('Lists - General', {
 	autostart: false,
@@ -56,8 +57,20 @@ asyncTest('Escape ordered list by pressing enter on last empty li', function() {
 	}, editor.selection.getNode());
 });
 
+asyncTest('Escaping list and applying style only applies styles to new text', function() {
+	editor.setContent("<ul><li>abc</li><li>def</li><li></li></ul>");
+	setSelection("ul li:nth-child(3)", 0);
+	robot.type(ENTER, false, function() {
+		robot.type('a', false, function() {
+			editor.execCommand('FormatBlock', false, 'h1');
+			equals(editor.getContent(), "<ul><li>abc</li><li>def</li></ul><h1>a</h1>");
+			start();
+		}, editor.selection.getNode());
+	}, editor.selection.getNode());
+});
+
 asyncTest('Caret positioned correctly after outdenting on non-last empty li', function() {
-	editor.setContent("<ul><li>a</li><li id='a'></li><li>b</li></ul>");
+	editor.setContent("<ul><li>a</li><li id='a'></li><li id>b</li></ul>");
 	setSelection("#a", 0);
 	robot.type(TAB, true, function() {
 		var tagName = editor.selection.getNode().tagName;
@@ -77,12 +90,57 @@ asyncTest('Caret position correctly after pressing enter on li with text', funct
 	}, editor.selection.getNode());
 });
 
+asyncTest('Caret positioned correctly after pressing enter multiple times to exit list', function() {
+	editor.setContent("<ul><li>a</li><li>b</li></ul><p id='last'>some text</p>");
+	setSelection('ul li:nth-child(2)', 1);
+	robot.type(ENTER, false, function(){
+		robot.type(ENTER, false, function(){
+			robot.type(ENTER, false, function(){
+				var node = editor.selection.getNode();
+				equals(node.tagName, 'P');
+				equals(node.nextSibling.tagName, 'P');
+				equals(node.nextSibling.id, 'last');
+				start();
+			}, editor.selection.getNode());
+		}, editor.selection.getNode());
+	}, editor.selection.getNode());
+});
+
+
 asyncTest('Outdent on enter when setting is set', function() {
 	editor.settings.list_outdent_on_enter = true;
 	editor.setContent("<ol><li>a<ol><li>b</li><li></li></ol></li></ol>");
 	setSelection('li ol li:nth-child(2)', 0);
 	robot.type(ENTER, false, function(){
 		equals(editor.getContent(), "<ol><li>a<ol><li>b</li></ol></li><li></li></ol>");
+		start();
+	}, editor.selection.getNode());
+});
+
+asyncTest('Outdent in nested list on enter when setting is set', function() {
+	editor.settings.list_outdent_on_enter = true;
+	editor.setContent("<ol><li>a<ol><li>b</li><li></li></ol></li></ol>");
+	setSelection('li ol li:nth-child(2)', 0);
+	robot.type(ENTER, false, function() {
+		robot.type(ENTER, false, function() {
+			robot.type('a', false, function(){
+				equals(editor.getContent(), "<ol><li>a<ol><li>b</li></ol></li></ol><p>a</p>");
+				start();
+			}, editor.selection.getNode());
+		}, editor.selection.getNode());
+	}, editor.selection.getNode());
+});
+
+asyncTest('Nested list has zero-sized nbsp', function() {
+	if (!tinymce.isGecko) {
+		start();
+	}
+
+	editor.settings.list_outdent_on_enter = true;
+	editor.setContent("<ul><li>a<ul><li>b</li></ul></li></ul>");
+	setSelection('li', 1);
+	robot.type(ENTER, false, function(){
+		equals(editor.getContent({format: 'raw'}), "<ul><li>a</li><li>" + ZERO_SIZED_NBSP + "<ul><li>b</li></ul></li></ul>");
 		start();
 	}, editor.selection.getNode());
 });
